Feat: Add Bulk Delete API endpoint for grocery items (#42)
* feat: add bulk delete endpoint for groceries

* switch ids payload to uint to better align with the base repo model

* simplify `ids` check for DeleteGroceriesByIDs

* simplify AI slop

* commit missing change

* add temporary e2e test for apis; remove rate limit for middleware when running grobot locally
